test/libsolidity/syntaxTests/constants/cyclic_dependency_1.sol
contract C {
    uint constant a = a;
}
// ----
// TypeError: (17-36): The value of the constant a has a cyclic dependency via a.
